[tool.poetry]
name = "clix"
version = "0.0.1"
description = "Toolkit for unbiased learning to rank"
authors = ["Philipp Hager <philipp.konstantin.hager@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
torch = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
